[tool.poetry]
name = "pysteg"
version = "0.1.0"
description = "A python library to create encrypted images using steganography."
authors = ["Lior Pollak <4294489+liorp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
imageio = "^2.9.0"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
